--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -32,23 +32,15 @@
                         </select>
                 </div>
 
-                <!--<form>-->
-                    <!--<div class="radio">-->
-                        <!--Active Challenges-->
-                    <!--</div>-->
-                    <!--<div class="radio">-->
-                        <!--Active Challenges-->
-                    <!--</div>Closed Challenges-->
-                <!--</form>-->
             </div>
 
+            <% @challenges.each do |c| %>
             <div class="row-fluid">
-
                 <div class="span6">
                     <div class="challenge well well-large">
-                        <h3><a href="15_challenges_detail.html">Android Qualifier - Sliding Menu</a></h3>
-                        Due in 10 days<br>
-                        13 members participating, 9 registered<br/>
+                        <h3><a href="15_challenges_detail.html"><%= c.name %></a></h3>
+                        Due in <%= pluralize(c.days_till_close, 'day') %><br>
+                        13 members participating, <%= c.registered_members %> registered<br/>
                         <strong>$1,600 Salesforce.com</strong><br>
                         Tags: <a href="#">javascript</a> | <a href="#">jQuery Mobile</a> | <a href="#">Android</a>
                         <table class="type task"><tr><td>TASK</td></tr></table>
@@ -66,103 +58,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row-fluid">
-
-                <div class="span6">
-                    <div class="challenge well well-large">
-                        <h3><a href="15_challenges_detail.html">Android Qualifier - Sliding Menu</a></h3>
-                        Due in 10 days<br>
-                        13 members participating, 9 registered<br/>
-                        <strong>$1,600 Salesforce.com</strong><br>
-                        Tags: <a href="#">javascript</a> | <a href="#">jQuery Mobile</a> | <a href="#">Android</a>
-                        <table class="type code"><tr><td>CODE</td></tr></table>
-                    </div>
-                </div>
-
-                <div class="span6">
-                    <div class="challenge well well-large">
-                        <h3><a href="15_challenges_detail.html">Android Qualifier - Sliding Menu</a></h3>
-                        Due in 10 days<br>
-                        13 members participating, 9 registered<br/>
-                        <strong>$1,600 Salesforce.com</strong><br>
-                        Tags: <a href="#">javascript</a> | <a href="#">jQuery Mobile</a> | <a href="#">Android</a>
-                        <table class="type code"><tr><td>CODE</td></tr></table>
-                    </div>
-                </div>
-            </div>
-            <div class="row-fluid">
-
-                <div class="span6">
-                    <div class="challenge well well-large">
-                        <h3><a href="15_challenges_detail.html">Android Qualifier - Sliding Menu</a></h3>
-                        Due in 10 days<br>
-                        13 members participating, 9 registered<br/>
-                        <strong>$1,600 Salesforce.com</strong><br>
-                        Tags: <a href="#">javascript</a> | <a href="#">jQuery Mobile</a> | <a href="#">Android</a>
-                        <table class="type sweep-stakes"><tr><td>SWEEP<br/>STAKES</td></tr></table>
-                    </div>
-                </div>
-
-                <div class="span6">
-                    <div class="challenge well well-large">
-                        <h3><a href="15_challenges_detail.html">Android Qualifier - Sliding Menu</a></h3>
-                        Due in 10 days<br>
-                        13 members participating, 9 registered<br/>
-                        <strong>$1,600 Salesforce.com</strong><br>
-                        Tags: <a href="#">javascript</a> | <a href="#">jQuery Mobile</a> | <a href="#">Android</a>
-                        <table class="type rookie"><tr><td>ROOKIE</td></tr></table>
-                    </div>
-                </div>
-            </div>
-            <div class="row-fluid">
-
-                <div class="span6">
-                    <div class="challenge well well-large">
-                        <h3><a href="15_challenges_detail.html">Android Qualifier - Sliding Menu</a></h3>
-                        Due in 10 days<br>
-                        13 members participating, 9 registered<br/>
-                        <strong>$1,600 Salesforce.com</strong><br>
-                        Tags: <a href="#">javascript</a> | <a href="#">jQuery Mobile</a> | <a href="#">Android</a>
-                        <table class="type design"><tr><td>DESIGN</td></tr></table>
-                    </div>
-                </div>
-
-                <div class="span6">
-                    <div class="challenge well well-large">
-                        <h3><a href="15_challenges_detail.html">Android Qualifier - Sliding Menu</a></h3>
-                        Due in 10 days<br>
-                        13 members participating, 9 registered<br/>
-                        <strong>$1,600 Salesforce.com</strong><br>
-                        Tags: <a href="#">javascript</a> | <a href="#">jQuery Mobile</a> | <a href="#">Android</a>
-                        <table class="type design"><tr><td>DESIGN</td></tr></table>
-                    </div>
-                </div>
-            </div>
-            <div class="row-fluid">
-
-                <div class="span6">
-                    <div class="challenge well well-large">
-                        <h3><a href="15_challenges_detail.html">Android Qualifier - Sliding Menu</a></h3>
-                        Due in 10 days<br>
-                        13 members participating, 9 registered<br/>
-                        <strong>$1,600 Salesforce.com</strong><br>
-                        Tags: <a href="#">javascript</a> | <a href="#">jQuery Mobile</a> | <a href="#">Android</a>
-                        <table class="type code"><tr><td>CODE</td></tr></table>
-                    </div>
-                </div>
-
-                <div class="span6">
-                    <div class="challenge well well-large">
-                        <h3><a href="15_challenges_detail.html">Android Qualifier - Sliding Menu</a></h3>
-                        Due in 10 days<br>
-                        13 members participating, 9 registered<br/>
-                        <strong>$1,600 Salesforce.com</strong><br>
-                        Tags: <a href="#">javascript</a> | <a href="#">jQuery Mobile</a> | <a href="#">Android</a>
-                        <table class="type design"><tr><td>DESIGN</td></tr></table>
-                    </div>
-                </div>
-            </div>
-
+            <% end %>
 
             <div class="pagination pagination-centered">
                 <ul>
