--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -105,7 +105,7 @@
                       <li><%= link_to 'What We Do', main_app.what_we_do_path %></li>
                       <li><%= link_to 'How It Works / Members', main_app.how_it_works_members_path %></li>
                       <li><%= link_to 'How It Works / Clients', main_app.how_it_works_clients_path %></li>
-                      <li><%= link_to 'About Us', '/about' %></li>
+                      <li><%= link_to 'About Us', 'about' %></li> <!-- refinery -->
                       <li><%= link_to 'Blog', main_app.blog_path %></li>
                       <li><%= link_to 'Privacy & Terms', '/privacy' %></li>
                       <li><%= link_to 'Contact Us', main_app.contact_path %></li>
