--- a/app/views/refinery/pages/show.html.erb
+++ b/app/views/refinery/pages/show.html.erb
@@ -4,7 +4,7 @@
         <div class="container">
 
             <div>
-                <div class="title"><h1><%= @page.browser_title %></h1></div>
+                <div class="title"><h1><%= @page.browser_title.upcase %></h1></div>
                 <%= raw @page.content_for(:body) %>
             </div>
 
