--- a/app/views/refinery/pages/show.html.erb
+++ b/app/views/refinery/pages/show.html.erb
@@ -1,3 +1,4 @@
+<% unless @page.browser_title.nil? %>
 <!-- CONTENT
             ================================================== -->
     <div class="content-wrapper">
@@ -10,3 +11,4 @@
 
         </div> <!-- /.container -->
     </div><!-- /.loginbar-wrapper -->
+<% end %>
