--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -122,7 +122,7 @@
                       <li><%= link_to 'Badges', '/badges' %></li>
                       <li><%= link_to 'FAQ', '/faq' %></li>
                       <li><%= link_to 'Help', '/help' %></li>
-                      <li><%= link_to 'Forums', /forums' %></li>
+                      <li><%= link_to 'Forums', '/forums' %></li>
                   </ul>
               </div>
 
