removed more refinery routes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,11 +79,11 @@
               <li><%= link_to 'COMMUNITY', main_app.community_path %></li>
               <li class="active"><%= link_to 'CHALLENGES', main_app.challenges_path %></li>
               <li><%= link_to 'LEADERBOARD', main_app.leaderboard_path %></li>
-              <li><%= link_to 'BADGES', main_app.badges_path %></li>
-              <li><%= link_to 'FAQ', main_app.faq_path %></li>
-              <li><%= link_to 'BLOG', main_app.blog_path %></li>
-              <li><%= link_to 'HELP', main_app.help_path %></li>
-              <li><%= link_to 'FORUMS', main_app.forums_path %></li>
+              <li><%= link_to 'BADGES', '/badges' %></li>
+              <li><%= link_to 'FAQ', '/faq' %></li>
+              <li><%= link_to 'BLOG', 'http://blog.cloudspokes.com' %></li>
+              <li><%= link_to 'HELP', '/help' %></li>
+              <li><%= link_to 'FORUMS', '/forums' %></li>
               <li><%= link_to 'ACCOUNT', main_app.account_path %></li>
           </ul>
 
@@ -107,7 +107,7 @@
                       <li><%= link_to 'How It Works / Members', '/how_it_works_members' %></li>
                       <li><%= link_to 'How It Works / Clients', '/how_it_works_clients' %></li>
                       <li><%= link_to 'About Us', '/about' %></li>
-                      <li><%= link_to 'Blog', 'http://blog.cloudspokes.ocm' %></li>
+                      <li><%= link_to 'Blog', 'http://blog.cloudspokes.com' %></li>
                       <li><%= link_to 'Privacy & Terms', '/privacy' %></li>
                       <li><%= link_to 'Contact Us', '/contact' %></li>
                   </ul>
