--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -1,140 +1,152 @@
-    <!-- HERO-UNIT
-            ================================================== -->
-    <div class="banner">
-        <div class="container">
-            <div class="hero-unit">
-                <!--<a class="btn btn-grey"><span>GET STARTED</span></a>-->
+<!-- banner-unit
+        ================================================== -->
+<div class="banner">
+    <div class="container">
+        <div class="banner-unit crowdsouced-banner custumer-res res">
+            <img src="/assets/banner/crowdsourced.jpg" alt=""/>
+            <div class="buttons">
+                <a class="get-started" href="23_contact_us.html"><span><span>GET STARTED</span></span></a>
+                <a class="learn-more" href="/how-it-works-clients">Or Learn More</a>
             </div>
-        </div> <!-- /.container -->
-    </div>
-
-    <!-- CONTENT
-            ================================================== -->
-    <div class="content-wrapper">
-        <div class="container">
-
-            <div class="tab-large" id="res-swicher">
-                <a class="tab-left active" href="#" rel=".custumer-res"><span>Customers</span></a>
-                <a class="tab-right" href="#" rel=".member-res"><span>Members</span></a>
+        </div>
+        <div class="banner-unit compete-code-win-banner hide member-res res">
+            <img src="/assets/banner/compete-code-win.jpg" alt=""/>
+            <div class="buttons">
+                <a class="get-started" href="#register-modal" data-toggle="modal"><span><span>GET STARTED</span></span></a>
+                <a class="learn-more" href="/how-it-works-members">Or Learn More</a>
             </div>
+        </div>
 
-            <div class="row-fluid res custumer-res">
-                <div class="span6">
-                    <div class="title"><h1>WHAT WE DO</h1></div>
-                    <ul>
-                        <li><a href="3_what_we_do.html"><span><i class="icon-app"></i></span>Application<br/>Developemnt</a></li>
-                        <li><a href="3_what_we_do.html"><span><i class="icon-mobile"></i></span>Mobile<br/>Developemnt</a></li>
-                        <li><a href="3_what_we_do.html"><span><i class="icon-analytics"></i></span>Analytics</a></li>
-                    </ul>
-                </div>
+    </div> <!-- /.container -->
+</div>
 
-                <div class="span6">
-                    <div class="title"><h1>HOW IT WORKS</h1></div>
-                    <ul>
-                        <li><a href="8_How-It-Works_Customer.html"><span><i class="icon-outsourced"></i></span>Outsourced<br/>Developemnt</a></li>
-                        <li><a href="8_How-It-Works_Customer.html"><span><i class="icon-cloud"></i></span>Cloud<br/>Technologies</a></li>
-                        <li><a href="8_How-It-Works_Customer.html"><span><i class="icon-team"></i></span>Team<br/>Augmentation</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row-fluid res member-res hide">
-                <div class="span6">
-                    <div class="title"><h1>WHAT WE DO</h1></div>
-                    <ul>
-                        <li><a href="3_what_we_do.html"><span><i class="icon-dev"></i></span>Development<br/>Competitions</a></li>
-                        <li><a href="3_what_we_do.html"><span><i class="icon-resolve"></i></span>Solve<br/>Problems</a></li>
-                        <li><a href="3_what_we_do.html"><span><i class="icon-design"></i></span>Design<br/>Competitions</a></li>
-                    </ul>
-                </div>
+<!-- CONTENT
+        ================================================== -->
+<div class="content-wrapper">
+    <div class="container">
 
-                <div class="span6">
-                    <div class="title"><h1>HOW IT WORKS</h1></div>
-                    <ul>
-                        <li><a href="7_how_it_works_member.html"><span><i class="icon-challenge"></i></span>Challenges<br/>Posted</a></li>
-                        <li><a href="7_how_it_works_member.html"><span><i class="icon-submission"></i></span>Submission<br/>Feedback</a></li>
-                        <li><a href="7_how_it_works_member.html"><span><i class="icon-win"></i></span>Win Money &<br/>Recognition</a></li>
-                    </ul>
-                </div>
+        <div class="tab-large" id="res-swicher">
+            <a class="tab-left active" href="javascript:;" rel=".custumer-res"><span>Customers</span></a>
+            <a class="tab-right" href="javascript:;" rel=".member-res"><span>Members</span></a>
+        </div>
+
+        <div class="row-fluid res custumer-res">
+            <div class="span6">
+                <div class="title"><h1>WHAT WE DO</h1></div>
+                <ul>
+                    <li><a href="/what-we-do"><span><i class="icon-app"></i></span>Application<br/>Developemnt</a></li>
+                    <li><a href="/what-we-do"><span><i class="icon-mobile"></i></span>Mobile<br/>Developemnt</a></li>
+                    <li><a href="/what-we-do"><span><i class="icon-analytics"></i></span>Analytics</a></li>
+                </ul>
             </div>
 
-
-            <div class="title"><h1>RECENTLY SHARED</h1></div>
-            <div id="quotes" class="slider">
-                <div class="scrollable">
-                    <div class="items">
-                        <div class="item"><div class="quote">I can’t tell you enough how blown away I am with this submission.  We launched this challenge with loose requirements Wednesday afternoon before Thanksgiving, and it was due first thing Monday morning (hence the premium purse) just in time for a pre-sale customer demo. This is a real testiament to the power of Cloudspokes!  Check out the video : <a href="#">http://vimeo.com/54417936</a>.</div></div>
-                        <div class="item"><div class="quote">I can’t tell you enough how blown away I am with this submission.  We launched this challenge with loose requirements Wednesday afternoon before Thanksgiving, and it was due first thing Monday morning (hence the premium purse) just in time for a pre-sale customer demo. This is a real testiament to the power of Cloudspokes!  Check out the video : <a href="#">http://vimeo.com/54417936</a>.</div></div>
-                        <div class="item"><div class="quote">I can’t tell you enough how blown away I am with this submission.  We launched this challenge with loose requirements Wednesday afternoon before Thanksgiving, and it was due first thing Monday morning (hence the premium purse) just in time for a pre-sale customer demo. This is a real testiament to the power of Cloudspokes!  Check out the video : <a href="#">http://vimeo.com/54417936</a>.</div></div>
-                    </div>
-                </div>
-                <a href="#" class="prev"><span>Prev</span></a>
-                <a href="#" class="next"><span>Next</span></a>
+            <div class="span6">
+                <div class="title"><h1>HOW IT WORKS</h1></div>
+                <ul>
+                    <li><a href="/how-it-works-clients"><span><i class="icon-outsourced"></i></span>Outsourced<br/>Developemnt</a></li>
+                    <li><a href="/how-it-works-clients"><span><i class="icon-cloud"></i></span>Cloud<br/>Technologies</a></li>
+                    <li><a href="/how-it-works-clients"><span><i class="icon-team"></i></span>Team<br/>Augmentation</a></li>
+                </ul>
             </div>
-            <br/>
-
-            <div class="title"><h1>HAPPENING NOW</h1></div>
-            <div class="row-fluid" id="status">
-                <div>
-                    <span class="icon-active-members"></span><strong>72,475</strong>ACTIVE MEMBERS
-                </div>
-                <div>
-                    <span class="icon-competing-today"></span><strong>2,580</strong>COMPETING TODAY
-                </div>
-                <div>
-                    <span class="icon-available-prize-money"></span><strong>$16,750</strong>AVAILABLE PRIZE MONEY
-                </div>
-                <div>
-                    <span class="active-challenges"></span><strong>21</strong>ACTIVE CHALLENGES
-                </div>
-                <div>
-                    <span class="counteries-working"></span><strong>09</strong>COUNTRIES WORKING
-                </div>
+        </div>
+        <div class="row-fluid res member-res hide">
+            <div class="span6">
+                <div class="title"><h1>WHAT WE DO</h1></div>
+                <ul>
+                    <li><a href="/what-we-do"><span><i class="icon-dev"></i></span>Development<br/>Competitions</a></li>
+                    <li><a href="/what-we-do"><span><i class="icon-resolve"></i></span>Solve<br/>Problems</a></li>
+                    <li><a href="/what-we-do"><span><i class="icon-design"></i></span>Design<br/>Competitions</a></li>
+                </ul>
             </div>
 
-            <br/>
+            <div class="span6">
+                <div class="title"><h1>HOW IT WORKS</h1></div>
+                <ul>
+                    <li><a href="/how-it-works-members"><span><i class="icon-challenge"></i></span>Challenges<br/>Posted</a></li>
+                    <li><a href="/how-it-works-members"><span><i class="icon-submission"></i></span>Submission<br/>Feedback</a></li>
+                    <li><a href="/how-it-works-members"><span><i class="icon-win"></i></span>Win Money &<br/>Recognition</a></li>
+                </ul>
+            </div>
+        </div>
 
-            <div class="row-fluid">
-                <div class="span6">
-                    <div class="title"><h1 class="rss">PRESS</h1></div>
-                    <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </a>
-                    <p>Ut faucibus rutrum mi, nec blandit felis faucibus et. Nullam venenatis tortor vel ipsum lacinia et bibendum velit hendrerit...</p>
 
-                    <a href="#">Donec posuere, arcu non egestas tempor.</a>
-                    <p>Ante nisi egestas lorem, vitae sollicitudin nibh ligula et lacus. Aliquam ut odio orci, ut iaculis est rutrum mi, nec blandit...</p>
-
-                    <a href="#">Consectetur adipiscing egestas tempor.</a>
-                    <p>Ante nisi egestas lorem, vitae sollicitudin nibh ligula et lacus. Aliquam ut odio orci, ut iaculis est rutrum mi, nec blandit. Ut faucibus rutrum nec...</p>
-                </div>
-
-                <div class="span6">
-                    <div class="title"><h1 class="rss">POSTS</h1></div>
-                    <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </a>
-                    <p>Ut faucibus rutrum mi, nec blandit felis faucibus et. Nullam venenatis tortor vel ipsum lacinia et bibendum velit hendrerit...</p>
-
-                    <a href="#">Donec posuere, arcu non egestas tempor.</a>
-                    <p>Ante nisi egestas lorem, vitae sollicitudin nibh ligula et lacus. Aliquam ut odio orci, ut iaculis est rutrum mi, nec blandit...</p>
-
-                    <a href="#">Consectetur adipiscing egestas tempor.</a>
-                    <p>Ante nisi egestas lorem, vitae sollicitudin nibh ligula et lacus. Aliquam ut odio orci, ut iaculis est rutrum mi, nec blandit. Ut faucibus rutrum nec...</p>
+        <div class="title"><h1>RECENTLY SHARED</h1></div>
+        <div id="quotes" class="slider">
+            <div class="scrollable">
+                <div class="items">
+                    <div class="item"><div class="quote">I can’t tell you enough how blown away I am with this submission.  We launched this challenge with loose requirements Wednesday afternoon before Thanksgiving, and it was due first thing Monday morning (hence the premium purse) just in time for a pre-sale customer demo. This is a real testiament to the power of Cloudspokes!  Check out the video : <a href="#">http://vimeo.com/54417936</a>.</div></div>
+                    <div class="item"><div class="quote">I can’t tell you enough how blown away I am with this submission.  We launched this challenge with loose requirements Wednesday afternoon before Thanksgiving, and it was due first thing Monday morning (hence the premium purse) just in time for a pre-sale customer demo. This is a real testiament to the power of Cloudspokes!  Check out the video : <a href="#">http://vimeo.com/54417936</a>.</div></div>
+                    <div class="item"><div class="quote">I can’t tell you enough how blown away I am with this submission.  We launched this challenge with loose requirements Wednesday afternoon before Thanksgiving, and it was due first thing Monday morning (hence the premium purse) just in time for a pre-sale customer demo. This is a real testiament to the power of Cloudspokes!  Check out the video : <a href="#">http://vimeo.com/54417936</a>.</div></div>
                 </div>
             </div>
-            <br/>
+            <a href="#" class="prev"><span>Prev</span></a>
+            <a href="#" class="next"><span>Next</span></a>
+        </div>
+        <br/>
 
-            <div class="title"><h1>MEET OUR CLIENTS</h1></div>
-            <div id="cleints" class="slider">
-                <div class="scrollable">
-                    <div class="items">
-                        <div class="item client-medtronic"></div>
-                        <div class="item client-salesforce"></div>
-                        <div class="item client-box"></div>
-                        <div class="item client-aau"></div>
-                        <div class="item client-docusign"></div>
-                        <div class="item client-jdrf"></div>
-                    </div>
-                </div>
-                <a href="#" class="prev"><span>Prev</span></a>
-                <a href="#" class="next"><span>Next</span></a>
+        <div class="title"><h1>HAPPENING NOW</h1></div>
+        <div class="row-fluid" id="status">
+            <div>
+                <span class="icon-active-members"></span><strong>72,475</strong>ACTIVE MEMBERS
+            </div>
+            <div>
+                <span class="icon-competing-today"></span><strong>2,580</strong>COMPETING TODAY
+            </div>
+            <div>
+                <span class="icon-available-prize-money"></span><strong>$16,750</strong>AVAILABLE PRIZE MONEY
+            </div>
+            <div>
+                <span class="active-challenges"></span><strong>21</strong>ACTIVE CHALLENGES
+            </div>
+            <div>
+                <span class="counteries-working"></span><strong>09</strong>COUNTRIES WORKING
+            </div>
+        </div>
+
+        <br/>
+
+        <div class="row-fluid">
+            <div class="span6">
+                <div class="title"><h1 class="rss">PRESS</h1></div>
+                <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </a>
+                <p>Ut faucibus rutrum mi, nec blandit felis faucibus et. Nullam venenatis tortor vel ipsum lacinia et bibendum velit hendrerit...</p>
+
+                <a href="#">Donec posuere, arcu non egestas tempor.</a>
+                <p>Ante nisi egestas lorem, vitae sollicitudin nibh ligula et lacus. Aliquam ut odio orci, ut iaculis est rutrum mi, nec blandit...</p>
+
+                <a href="#">Consectetur adipiscing egestas tempor.</a>
+                <p>Ante nisi egestas lorem, vitae sollicitudin nibh ligula et lacus. Aliquam ut odio orci, ut iaculis est rutrum mi, nec blandit. Ut faucibus rutrum nec...</p>
             </div>
 
-        </div> <!-- /.container -->
-    </div><!-- /.loginbar-wrapper -->
+            <div class="span6">
+                <div class="title"><h1 class="rss">POSTS</h1></div>
+                <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </a>
+                <p>Ut faucibus rutrum mi, nec blandit felis faucibus et. Nullam venenatis tortor vel ipsum lacinia et bibendum velit hendrerit...</p>
+
+                <a href="#">Donec posuere, arcu non egestas tempor.</a>
+                <p>Ante nisi egestas lorem, vitae sollicitudin nibh ligula et lacus. Aliquam ut odio orci, ut iaculis est rutrum mi, nec blandit...</p>
+
+                <a href="#">Consectetur adipiscing egestas tempor.</a>
+                <p>Ante nisi egestas lorem, vitae sollicitudin nibh ligula et lacus. Aliquam ut odio orci, ut iaculis est rutrum mi, nec blandit. Ut faucibus rutrum nec...</p>
+            </div>
+        </div>
+        <br/>
+
+        <div class="title"><h1>MEET OUR CLIENTS</h1></div>
+        <div id="cleints" class="slider">
+            <div class="scrollable">
+                <div class="items">
+                    <div class="item client-google"></div>
+                    <div class="item client-salesforce"></div>
+                    <div class="item client-box"></div>
+                    <div class="item client-aau"></div>
+                    <div class="item client-docusign"></div>
+                    <div class="item client-jdrf"></div>
+                </div>
+            </div>
+            <a href="#" class="prev"><span>Prev</span></a>
+            <a href="#" class="next"><span>Next</span></a>
+        </div>
+
+    </div> <!-- /.container -->
+</div><!-- /.loginbar-wrapper -->
